pls work thisssss timeeeee

--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
   <meta charset="utf-8">
   <title>happy valentine</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="https://fonts.googleapis.com/css2?family=dancing+script:wght@400;700&family=poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h2>little things i love about you</h2>
-  <button id="reveal-btn">reveal one ✨</button>
+  <h1>happy valentine’s day ❤️</h1>
+  <p class="subtitle">to the one who makes my world brighter every day</p>
+  <button id="reveal-btn">open my heart 💌</button>
   <div id="reveal-text" class="hidden-text">you are amazing ✨</div>
 
-  <h2>songs that feel like us</h2>
-  <p>press play when you’re ready… this one is for you ❤️</p>
+  <h2>my love letter to you 💕</h2>
+  <p>hey love,</p>
+  <p>every moment with you feels like magic. you are my comfort, my happiness, my favorite person. thank you for being you — today and always. ❤️</p>
 
-  <h2>our memories</h2>
+  <h2>our memories 📸</h2>
   <div class="gallery">
-    <img src="pic1.jpeg" alt="memory 1">
-    <img src="pic2.jpeg" alt="memory 2">
-    <img src="pic3.jpeg" alt="memory 3">
-    <img src="pic4.jpeg" alt="memory 4">
-    <img src="pic5.jpeg" alt="memory 5">
+    <img src="memory1.jpg" alt="memory 1">
+    <img src="memory2.jpg" alt="memory 2">
+    <img src="memory3.jpg" alt="memory 3">
+    <img src="memory4.jpg" alt="memory 4">
+    <img src="memory5.jpg" alt="memory 5">
   </div>
 
-  <h2>find your way to me</h2>
-  <p>use arrow keys to reach me ❤️</p>
+  <h2>find your way to me ❤️</h2>
+  <p>use arrow keys to reach me</p>
 
   <div id="maze" class="maze-grid"></div>
 
