--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>happy valentine’s day ❤️</h1>
+  <h1>happy valentine's day ❤️</h1>
   <p class="subtitle">to the one who makes my world brighter every day</p>
   <button id="reveal-btn">open my heart 💌</button>
   <div id="reveal-text" class="hidden-text">you are amazing ✨</div>
@@ -31,7 +31,7 @@
   </div>
 
   <h2>find your way to me ❤️</h2>
-  <p>use arrow keys to reach me</p>
+  <p style="text-align: center;">use arrow keys to reach me</p>
 
   <div id="maze" class="maze-grid"></div>
 
