--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>happy valentine's day ❤️</h1>
+  <h1>happy valentine's day 💗</h1>
   <p class="subtitle">to the one who makes my world brighter every day</p>
+  
   <button id="reveal-btn">open my heart 💌</button>
-  <div id="reveal-text" class="hidden-text">you are amazing ✨</div>
+  <div id="reveal-text" class="hidden-text">
+    <h3>what do i love about you?</h3>
+    <p id="note">click again to see another reason ✨</p>
+  </div>
 
   <h2>my love letter to you 💕</h2>
   <p>hey love,</p>
@@ -28,6 +32,11 @@
     <img src="memory3.jpg" alt="memory 3">
     <img src="memory4.jpg" alt="memory 4">
     <img src="memory5.jpg" alt="memory 5">
+  </div>
+
+  <h2>our song 🎵</h2>
+  <div class="spotify-container">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3n3Ppam7vgaVa1iaRUc9Lp?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
   </div>
 
   <h2>find your way to me ❤️</h2>
