--- a/index.html
+++ b/index.html
@@ -6,20 +6,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   
   <!-- fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>happy valentine's day 💗</h1>
+  <h1>happy valentine's day ❤️</h1>
   <p class="subtitle">to the one who makes my world brighter every day</p>
-  
   <button id="reveal-btn">open my heart 💌</button>
-  <div id="reveal-text" class="hidden-text">
-    <h3>what do i love about you?</h3>
-    <p id="note">click again to see another reason ✨</p>
-  </div>
+  <div id="reveal-text" class="hidden-text">you are amazing ✨</div>
 
   <h2>my love letter to you 💕</h2>
   <p>hey love,</p>
@@ -27,18 +23,19 @@
 
   <h2>our memories 📸</h2>
   <div class="gallery">
-    <img src="memory1.jpg" alt="memory 1">
-    <img src="memory2.jpg" alt="memory 2">
-    <img src="memory3.jpg" alt="memory 3">
-    <img src="memory4.jpg" alt="memory 4">
-    <img src="memory5.jpg" alt="memory 5">
+    <img src="pic1.jpeg" alt="memory 1">
+    <img src="pic2.jpeg" alt="memory 2">
+    <img src="pic3.jpeg" alt="memory 3">
+    <img src="pic4.jpeg" alt="memory 4">
+    <img src="pic5.jpeg" alt="memory 5">
   </div>
-
-  <h2>our song 🎵</h2>
-  <div class="spotify-container">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3n3Ppam7vgaVa1iaRUc9Lp?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-  </div>
-
+    <section class="music">
+        <h2>songs that remind me of us 🎶</h2>
+            <section class="music">
+        <h2>songs that feel like us 🎶</h2>
+        <iframe src="https://open.spotify.com/embed/playlist/5l0yngozkfickwhmbdw3ov?utm_source=generator" width="100%" height="380" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p class="music-note">press play when you’re ready… these  for you ❤️</p>
+    </section>
   <h2>find your way to me ❤️</h2>
   <p style="text-align: center;">use arrow keys to reach me</p>
 
