--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
     <section class="music">
         <h2>songs that remind me of us 🎶</h2>
-        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5L0ynGOZKFicKWHmBDw3Ov?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5L0ynGOZKFicKWHmBDw3Ov?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         <p class="music-note">press play when you’re ready… these are for you ❤️</p>
     </section>
   <h2>find your way to me ❤️</h2>
